<?xml version="1.0"?>
<package format="3">
  <name>ros2_custom_msgs</name>
  <version>0.0.0</version>
  <description>Custom ROS2 message and status publisher node</description>

  <maintainer email="sujithmalladi@gmail.com">Malladi Sujith Babu</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependency -->
  <depend>rclcpp</depend>

  <!-- Message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Required for custom message packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>



